feat: Integrate affiliate links and site verification
Adds affiliate buy links in various components and a Google site verification meta tag for SEO. Also enhances the visual presentation of affiliate links and introduces a sticky footer for promotions. This change aims to improve monetization and search engine discoverability.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="keywords" content="Lotto AI, Lotto Predictor, Number Generator, AI Analysis, Probability Calculator, Statistics, Global Results, Strategy Tool">
     <meta name="author" content="Lotto AI">
     
+    <!-- Google Site Verification (Alternative to DNS TXT Record) -->
+    <!-- REPLACE 'PASTE_YOUR_GOOGLE_CODE_HERE' WITH THE CODE FROM GOOGLE SEARCH CONSOLE -->
+    <meta name="google-site-verification" content="PASTE_YOUR_GOOGLE_CODE_HERE" />
+
     <!-- Canonical URL (Crucial for SEO) -->
     <link rel="canonical" href="https://aipowerdraw.com/" />
     
@@ -49,7 +53,7 @@
     </script>
 
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8761648075829250" crossorigin="anonymous"></script>
 
     <style>
         body {
